Replace cp -l with --reflink=auto
Hardlinking in cp has special file permission requirements that can
make it fail.

Using --reflink=auto is much safer and does not have the same
requirements, while preserving its advantages.

This allows us to undo the unsecure chmod done on src dir .
https://review.openstack.org/#/c/625576/

Change-Id: Ib42e08a2656ccbee780d15948a0390d9ab4ffc89

--- a/roles/setup-devstack-cache/tasks/main.yaml
+++ b/roles/setup-devstack-cache/tasks/main.yaml
@@ -1,6 +1,5 @@
 - name: Copy cached devstack files
-  # This uses hard links to avoid using extra space.
-  command: "find {{ devstack_cache_dir }}/files -mindepth 1 -maxdepth 1 -exec cp -l {} {{ devstack_base_dir }}/devstack/files/ ;"
+  command: "find {{ devstack_cache_dir }}/files -mindepth 1 -maxdepth 1 -exec cp --reflink=auto {} {{ devstack_base_dir }}/devstack/files/ ;"
   become: true
 
 - name: Set ownership of cached files
