Move local.conf creation to last minute
There may be situations where you'd like to do, essentially

 include_role:
   name: run-devstack
   vars:
     devstack_localrc:
       VARIABLE: {{ value }}

However if the local.conf has already been written out, this never
applies.  There doesn't seem to be any reason to not do this at the
very last moment, just before devstack runs, to give maximum
flexibility in adding values.  Move from the pre.yaml to be included
from the run-devstack role directly.

Change-Id: Id6731c5610d09d68e7d35f9b7b84909b2168ef26

--- a/roles/run-devstack/tasks/main.yaml
+++ b/roles/run-devstack/tasks/main.yaml
@@ -1,3 +1,9 @@
+# NOTE(ianw): Do this at the very last moment, so you can specify
+# devstack_localrc in the vars: of the run-devstack role too.
+- name: Write devstack local conf
+  include_role:
+    name: write-devstack-local-conf
+
 - name: Run devstack
   shell:
     cmd: |
