[wip] allow for a tcpdump during run
* quote args

Change-Id: I3fcd82f24b85eec0593b35154d23f6d85cb8719e

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -507,6 +507,11 @@
     description: Fedora latest platform test
     nodeset: devstack-single-node-fedora-latest
     voting: false
+    vars:
+      devstack_localrc:
+        TCPDUMP_ARGS: "-i any tcp port 3260"
+      devstack_services:
+        tcpdump: true
 
 - job:
     name: devstack-platform-xenial
