Add service to tcpdump during run
This adds a service to run a tcpdump during the run.  This can be
useful to capture various network traffic for post analysis.

There didn't seem to quite be an appropriate place to document it, so
a new debugging file is started, with some terse explaination of our
various system-wide debugging services.

Change-Id: I09aaa57611c5047d09a9bce7932d34e9d50b30e6

--- a/roles/export-devstack-journal/tasks/main.yaml
+++ b/roles/export-devstack-journal/tasks/main.yaml
@@ -34,6 +34,7 @@
 # TODO: convert this to ansible
 #  - make a list of the above units
 #  - iterate the list here
+#  - might be nice to stamp this into the README
 - name: Export journal
   become: true
   shell:
